[gd_scene load_steps=16 format=3 uid="uid://dwlunhs04sner"]

[ext_resource type="Script" path="res://scripts/level/level.gd" id="1_ifcao"]
[ext_resource type="PackedScene" uid="uid://jmq3jpybnscr" path="res://scenes/lights/light_manager.tscn" id="2_yp5vq"]
[ext_resource type="PackedScene" uid="uid://cw67c53clx2ow" path="res://scenes/lights/light_source.tscn" id="3_kdq6g"]
[ext_resource type="PackedScene" uid="uid://do63f45y6f8b7" path="res://scenes/shadows/static_shadow.tscn" id="4_4d8oo"]
[ext_resource type="Texture2D" uid="uid://7ecjrghv6myt" path="res://assets/sprites/environment/black_background.png" id="5_k5s2g"]
[ext_resource type="PackedScene" uid="uid://dqogeqjd6fefn" path="res://scenes/player/shadow_fragment.tscn" id="6_i4878"]
[ext_resource type="PackedScene" uid="uid://b510eoqme768v" path="res://scenes/player/player.tscn" id="6_tncgk"]
[ext_resource type="PackedScene" uid="uid://c8kxyeayy6mk7" path="res://scenes/enemy/enemy.tscn" id="7_jvapu"]
[ext_resource type="TileSet" uid="uid://deav3ofhsuedy" path="res://scenes/level/levels/default_tset.tres" id="8_nlgs5"]
[ext_resource type="PackedScene" uid="uid://d4ctbc0iub56y" path="res://scenes/level/next_level_button.tscn" id="9_4kad1"]
[ext_resource type="PackedScene" uid="uid://d0xhi332n37kr" path="res://scenes/misc/damage_texture.tscn" id="10_nxyq3"]
[ext_resource type="Script" path="res://scenes/level/levels/level_2_tutorial_text.gd" id="12_s20be"]
[ext_resource type="Texture2D" uid="uid://dqs3w4ydpg78g" path="res://assets/sprites/arrow.png" id="13_8uol1"]
[ext_resource type="PackedScene" uid="uid://cir5pyb5tu317" path="res://scenes/misc/shake_camera.tscn" id="13_u6gyu"]

[sub_resource type="Curve2D" id="Curve2D_2hkf8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 208, 128, 0, 0, 0, 0, 128, 128, 0, 0, 0, 0, 128, 80, 0, 0, 0, 0, 208, 80, 0, 0, 0, 0, 208, 32, 0, 0, 0, 0, 128, 32, 0, 0, 0, 0, 128, 80, 0, 0, 0, 0, 208, 80, 0, 0, 0, 0, 208, 128)
}
point_count = 9

[node name="Level4" type="Node2D"]
script = ExtResource("1_ifcao")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("8_nlgs5")
format = 2
layer_0/tile_data = PackedInt32Array(262163, 131072, 1, 196625, 2, 65536, 17, 65536, 1, 16, 65536, 1, 15, 65536, 1, 14, 131072, 0, 13, 65536, 0, 12, 65536, 0, 11, 65536, 0, 10, 65536, 0, 9, 65536, 0, 8, 65536, 0, 7, 65536, 0, 6, 65536, 0, 5, 65536, 0, 4, 65536, 0, 3, 65536, 0, 2, 65536, 0, 1, 0, 0, 65537, 0, 1, 131073, 0, 1, 196609, 0, 1, 262145, 0, 1, 327681, 0, 1, 393217, 0, 1, 458753, 0, 1, 524289, 0, 1, 589825, 0, 1, 655361, 0, 2, 655362, 65536, 2, 655363, 65536, 2, 655364, 65536, 2, 655365, 65536, 2, 655366, 65536, 2, 655367, 65536, 2, 655368, 65536, 2, 655369, 65536, 2, 655370, 65536, 2, 655371, 65536, 2, 655372, 65536, 2, 655373, 65536, 2, 655374, 65536, 2, 655375, 65536, 2, 655376, 65536, 2, 655377, 65536, 2, 655378, 65536, 2, 655379, 131072, 2, 327699, 131072, 1, 393235, 131072, 1, 458771, 131072, 1, 524307, 131072, 1, 589843, 131072, 1, 0, 65536, 1, 65536, 65536, 1, 131072, 65536, 1, 196608, 65536, 1, 262144, 65536, 1, 327680, 65536, 1, 393216, 65536, 1, 458752, 65536, 1, 524288, 65536, 1, 589824, 65536, 1, 655360, 65536, 1, 720896, 65536, 1, 720897, 65536, 1, 720898, 65536, 1, 720899, 65536, 1, 720900, 65536, 1, 720901, 65536, 1, 720902, 65536, 1, 720903, 65536, 1, 720904, 65536, 1, 720905, 65536, 1, 720906, 65536, 1, 720907, 65536, 1, 720908, 65536, 1, 720909, 65536, 1, 720910, 65536, 1, 720911, 65536, 1, 720912, 65536, 1, 720913, 65536, 1, 720914, 65536, 1, 720915, 65536, 1, 196627, 131072, 0, 196626, 65536, 0, 18, 65536, 1, 19, 65536, 1, 65555, 65536, 1, 131091, 65536, 1, 196619, 1, 65536, 196617, 1, 65536, 131078, 4, 65536, 65542, 131072, 1, 196614, 131072, 1, 327695, 1, 65536, 393226, 1, 65536, 524303, 1, 65536, 131089, 65536, 1, 65553, 65536, 1, 524299, 1, 65536, 65551, 65536, 1, 131087, 65536, 1, 196623, 65536, 0, 196624, 65536, 0, 131090, 65536, 1, 65554, 65536, 1, 65550, 131072, 1, 131086, 131072, 1, 196622, 196608, 1)

[node name="LightManager" parent="." instance=ExtResource("2_yp5vq")]

[node name="LightSource" parent="." instance=ExtResource("3_kdq6g")]
position = Vector2(240, 112)

[node name="StaticShadow" parent="." instance=ExtResource("4_4d8oo")]
position = Vector2(288, 133)

[node name="ShadowFragment" parent="." instance=ExtResource("6_i4878")]
position = Vector2(72, 40)

[node name="ShadowFragment2" parent="." instance=ExtResource("6_i4878")]
position = Vector2(248, 152)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_2hkf8")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(208, 128)
rotates = false

[node name="Enemy" parent="Path2D/PathFollow2D" node_paths=PackedStringArray("path") instance=ExtResource("7_jvapu")]
path = NodePath("../..")
follow_path = true

[node name="Player" parent="." node_paths=PackedStringArray("TEMPORARY_default_inhabited_shadow") instance=ExtResource("6_tncgk")]
position = Vector2(288, 133)
TEMPORARY_default_inhabited_shadow = NodePath("../StaticShadow")

[node name="DamageTexture" parent="." instance=ExtResource("10_nxyq3")]

[node name="BG" type="CanvasLayer" parent="."]
layer = -100

[node name="Sprite2D" type="Sprite2D" parent="BG"]
position = Vector2(160, 91)
texture = ExtResource("5_k5s2g")

[node name="NextLevelButton" parent="." instance=ExtResource("9_4kad1")]
visible = false

[node name="TutorialText" type="Control" parent="." node_paths=PackedStringArray("monitored_enemy")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_s20be")
monitored_enemy = NodePath("../Path2D/PathFollow2D/Enemy")

[node name="DoorLabel" type="Label" parent="TutorialText"]
layout_mode = 0
offset_left = 232.0
offset_top = 32.0
offset_right = 319.0
offset_bottom = 45.0
text = "the door is locked..."

[node name="FragmentLabel" type="Label" parent="TutorialText"]
layout_mode = 0
offset_left = 123.0
offset_top = 164.0
offset_right = 302.0
offset_bottom = 177.0
text = "collect fragments to unleash your power"

[node name="Sprite2D" type="Sprite2D" parent="TutorialText/FragmentLabel"]
position = Vector2(146, -12)
rotation = -1.57079
texture = ExtResource("13_8uol1")

[node name="SecondFragmentLabel" type="Label" parent="TutorialText"]
visible = false
layout_mode = 0
offset_left = 63.0
offset_top = 59.0
offset_right = 103.0
offset_bottom = 72.0
rotation = -1.57079

[node name="Sprite2D" type="Sprite2D" parent="TutorialText/SecondFragmentLabel"]
position = Vector2(1.00006, 8.99999)
rotation = 1.57079
texture = ExtResource("13_8uol1")

[node name="EnemyLabel" type="Label" parent="TutorialText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 108.0
offset_top = 79.0
offset_right = 273.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "jump to enemy shadow to possess it"

[node name="Camera2D" parent="." instance=ExtResource("13_u6gyu")]
